tests/compile/no_reference.stderr
error[E0277]: the trait bound `SomeTable: rust_query::hash::ValidInSchema<v0::Schema>` is not satisfied
  --> tests/compile/no_reference.rs:10:17
   |
10 |         marker: SomeTable,
   |                 ^^^^^^^^^ the trait `rust_query::hash::ValidInSchema<v0::Schema>` is not implemented for `SomeTable`
   |
   = help: the following other types implement trait `rust_query::hash::ValidInSchema<S>`:
             Option<T>
             String
             f64
             i64
note: required by a bound in `TypBuilder::<S>::col`
  --> src/hash.rs
   |
   |     pub fn col<T: ValidInSchema<S>>(&mut self, name: &'static str) {
   |                   ^^^^^^^^^^^^^^^^ required by this bound in `TypBuilder::<S>::col`
